<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<ScrollView
		android:id="@+id/scrollView2"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/toStartButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/buttonPrevWeek">

		<HorizontalScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TableLayout
				android:id="@+id/tableLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</HorizontalScrollView>
	</ScrollView>

	<Button
		android:id="@+id/buttonPrevWeek"
		style="@style/DayButtonUnChoosed"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:elevation="10dp"
		android:text="@string/prev_week"
		android:translationZ="8dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/buttonNextWeek"
		style="@style/DayButtonUnChoosed"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/next_week"
		app:layout_constraintBottom_toTopOf="@+id/scrollView2"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/weekDates"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:gravity="center"
		android:text="@string/week_dates"
		android:textColor="@color/green_primary"
		app:layout_constraintBottom_toTopOf="@+id/scrollView2"
		app:layout_constraintEnd_toStartOf="@+id/buttonNextWeek"
		app:layout_constraintStart_toEndOf="@+id/buttonPrevWeek"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/toDailyButton"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginStart="5dp"
		android:backgroundTint="@color/green_primary"
		android:elevation="5dp"
		android:padding="0dp"
		android:text="@string/to_daily"
		android:textAllCaps="false"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/guideline"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/toStartButton"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginBottom="5dp"
		android:layout_marginEnd="5dp"
		android:backgroundTint="@color/white"
		android:elevation="5dp"
		android:padding="0dp"
		android:text="@string/change_schedule"
		android:textAllCaps="false"
		android:textColor="@color/green_primary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/guideline"
		app:layout_constraintTop_toTopOf="@+id/toDailyButton" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>